feat: Implement UT for twitter service - MEED-3381 - Meeds-io/MIPs#105 (#63)