@@ -29,6 +29,9 @@
   <artifactId>gamification-twitter-service</artifactId>
   <packaging>jar</packaging>
   <name>Meeds:: Gamification Twitter - Service</name>
+  <properties>
+    <exo.test.coverage.ratio>0.36</exo.test.coverage.ratio>
+  </properties>
   <dependencies>
     <dependency>
       <groupId>org.exoplatform.social</groupId>
@@ -45,8 +48,35 @@
       <artifactId>gamification-services</artifactId>
       <scope>provided</scope>
     </dependency>
+    <!-- Test -->
+    <dependency>
+      <groupId>org.exoplatform.addons.gamification</groupId>
+      <artifactId>gamification-services</artifactId>
+      <scope>test</scope>
+      <type>test-jar</type>
+    </dependency>
   </dependencies>
   <build>
-    <finalName>gamification-twitter-service</finalName>
+    <finalName>${project.artifactId}</finalName>
+    <plugins>
+      <plugin>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <argLine>@{argLine} --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.time=ALL-UNNAMED  --add-opens=java.base/java.time.format=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED </argLine>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>com.jcabi</groupId>
+        <artifactId>jcabi-maven-plugin</artifactId>
+      </plugin>
+    </plugins>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+        </plugin>
+      </plugins>
+    </pluginManagement>
   </build>
 </project>
